优化benchmark脚本